<resources>
    <string name="app_name">WearableApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="say_something_button_text">Say Something!</string>
    <string name="server_address">127.0.0.1:8000</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="server_address_label">Server Address:</string>
</resources>
